added node-dht-sensor to package-lock.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
+    "node-dht-sensor": "^0.0.33"
     "mysql": "^2.16.0"
   },
   "devDependencies": {},
