added onoff package - should hopefully avoid gpio is not defined error

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
     "node-dht-sensor": "^0.0.33",
+    "onoff": "^1.2.0",
     "mysql": "^2.16.0"
   },
   "devDependencies": {},
