--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-four-a-room-sensing-web-site",
+  "name": "assignment-5-inspecting-plans",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,16 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Nijithaan Selvaratnam",
+  "author": "Oliver Benee",
   "license": "ISC",
-  "description": "Assignment 3",
+  "description": "Assignment 5",
   "dependencies": {
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "onoff": "^1.2.0",
+    "node-dht-sensor": "^0.0.33"
   },
   "devDependencies": {},
   "repository": {
