Another change to package.json. Yes, i am still trying to make it work.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mysql": "github:mysqljs/mysql",
     "mysql-server": "^1.0.5",
     "node-dht-sensor": "^0.3.0",
-    "onoff": "^1.2.0",
+    "onoff": "^1.2.0"
   },
   "devDependencies": {},
   "repository": {
