--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-5-inspecting-plans",
+  "name": "assignment-four-a-room-sensing-web-site",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,19 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Oliver Benee",
+  "author": "Nijithaan Selvaratnam",
   "license": "ISC",
-  "description": "Assignment 5",
-  "dependencies": {    
-    "body-parser": "^1.19.0",
-    "chart.js": "^2.8.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
+  "description": "Assignment 3",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "chart.js": "^2.7.3",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
-    "mysql": "github:mysqljs/mysql",
-    "mysql-server": "^1.0.5",
+    "mysql": "^2.16.0",
     "node-dht-sensor": "^0.3.0",
-    "onoff": "^1.2.0"
+    "onoff": "^4.1.3"
   },
   "devDependencies": {},
   "repository": {
